syntax = "proto3";
package parlance.v1;

import "parlance/v1/common.proto";

option go_package = "parlance/v1;parlance";

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  repeated Role roles = 4;
  string created_at = 5;
  string updated_at = 6;
}

message Role {
  string id = 1;
  string name = 2;
  repeated Permission permissions = 3;
}

message Permission {
  string id = 1;
  string name = 2;
  string resource = 3;
  string action = 4;
}

message ListUsersRequest {
  PaginationRequest pagination = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  PaginationResponse pagination = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message AssignRoleResponse {
  User user = 1;
}
